2010-01-12  Michiel Roos	<michiel@netcreators.com>

	* Fix #11754: Triggering prefix help should say "pages" and not "page" (Thanks to Stephen Bungert)
	* Fix #11737: Set the default key to be 'pages' instead of 'tt_news'. (Thanks to Steffen Gebert)

2009-01-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Continued implementation of form view

2009-01-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Added base view and controller classes
	* Created view for errors
	* Implementation of the form view

2009-01-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Implementation of FE controller: created base functions and configuration processing

2009-01-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Merge with 1_x_x branch
	* Added base model and implemented "save" method
	* Added base data store and comments data store

2009-01-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Released version 1.5.2

2009-01-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Template is now valid "XMTML 1.0 strict"

2008-12-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed cache clearing in eID to be compatible with TYPO3 4.3
	* Removed old styles
	* Changed default order of codes to show form after the comments
	* Added clearCache to eID links, reordered check for storagePid

2008-12-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Removed non-standard autocomplete attribute from template

2008-11-28  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9760: Multiple pages with comment form - one storage folder
	* Fixed bug #9635: ###UID### is not replaced in tx_comments template
	* Fixed bug #9456: https Links won'be detected
	* Released version 1.5.1

2008-11-19	Dmitry Dulepov	<dmitry@typo3.org>

	* Better message about page browser missing

2008-11-04	Dmitry Dulepov	<dmitry@typo3.org>

	* Initial work on comment model object
	* Add directories for MVC
	* Rename res/ directory and update all references
	* Move pi1/static/ to static/
	! comments 2.0 development starts

2008-09-02	Dmitry Dulepov	<dmitry@typo3.org>
