@@ -16,7 +16,7 @@
 <!-- ###COMMENT_LIST### begin
 	This subpart formats comments
 -->
-<a name="tx-comments-comments-###UID###"></a>
+<a id="tx-comments-comments-###UID###"></a>
 <div class="tx-comments-comments">
 
 	<!-- ###CONTENT### begin -->
@@ -70,31 +70,33 @@
 	This subpart formats comment form
 -->
 <div class="tx-comments-comment-form">
-	<h4>###TEXT_ADD_COMMENT###</h4>
 	###TOP_MESSAGE###
 	<form action="###ACTION_URL###" method="post">
-		<input type="hidden" name="tx_comments_pi1[itemurl]" value="###CURRENT_URL###" />
-		<input type="hidden" name="tx_comments_pi1[itemurlchk]" value="###CURRENT_URL_CHK###" />
-		<p>
-			<span class="tx-comments-required-mark">*</span> ###TEXT_REQUIRED_HINT###
-		</p>
-		<label for="tx_comments_pi1_firstname">###TEXT_FIRST_NAME###</label>
-		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[firstname]" id="tx_comments_pi1_firstname" value="###FIRSTNAME###" /> ###REQUIRED_FIRSTNAME### ###ERROR_FIRSTNAME###<br />
-		<label for="tx_comments_pi1_lastname">###TEXT_LAST_NAME###</label>
-		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[lastname]" id="tx_comments_pi1_lastname" value="###LASTNAME###" /> ###REQUIRED_LASTNAME### ###ERROR_LASTNAME###<br />
-		<label for="tx_comments_pi1_email">###TEXT_EMAIL###</label>
-		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[email]" id="tx_comments_pi1_email" value="###EMAIL###" /> ###REQUIRED_EMAIL### ###ERROR_EMAIL###<br />
-		<label for="tx_comments_pi1_homepage">###TEXT_WEB_SITE###</label>
-		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[homepage]" id="tx_comments_pi1_homepage" value="###HOMEPAGE###" /> ###REQUIRED_HOMEPAGE### ###ERROR_HOMEPAGE###<br />
-		<label for="tx_comments_pi1_location">###TEXT_LOCATION###</label>
-		<input autocomplete="off" class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[location]" id="tx_comments_pi1_location" value="###LOCATION###" /> ###REQUIRED_LOCATION### ###ERROR_LOCATION###<br />
-		###CAPTCHA###
-		<label for="tx_comments_pi1_content">###TEXT_CONTENT###</label>
-		<textarea cols="32" rows="7" name="tx_comments_pi1[content]" id="tx_comments_pi1_content">###CONTENT###</textarea> ###REQUIRED_CONTENT### ###ERROR_CONTENT###<br />
-		<label for="tx_comments_pi1_submit">&nbsp;</label>
-		<input type="submit" name="tx_comments_pi1[submit]" id="tx_comments_pi1_submit" value="###TEXT_SUBMIT###" />
-		<input type="reset" value="###TEXT_RESET###" />
-		###JS_USER_DATA###
+		<fieldset>
+			<legend>###TEXT_ADD_COMMENT###</legend>
+			<input type="hidden" name="tx_comments_pi1[itemurl]" value="###CURRENT_URL###" />
+			<input type="hidden" name="tx_comments_pi1[itemurlchk]" value="###CURRENT_URL_CHK###" />
+			<p>
+				<span class="tx-comments-required-mark">*</span> ###TEXT_REQUIRED_HINT###
+			</p>
+			<label for="tx_comments_pi1_firstname">###TEXT_FIRST_NAME###</label>
+			<input class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[firstname]" id="tx_comments_pi1_firstname" value="###FIRSTNAME###" /> ###REQUIRED_FIRSTNAME### ###ERROR_FIRSTNAME###<br />
+			<label for="tx_comments_pi1_lastname">###TEXT_LAST_NAME###</label>
+			<input class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[lastname]" id="tx_comments_pi1_lastname" value="###LASTNAME###" /> ###REQUIRED_LASTNAME### ###ERROR_LASTNAME###<br />
+			<label for="tx_comments_pi1_email">###TEXT_EMAIL###</label>
+			<input class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[email]" id="tx_comments_pi1_email" value="###EMAIL###" /> ###REQUIRED_EMAIL### ###ERROR_EMAIL###<br />
+			<label for="tx_comments_pi1_homepage">###TEXT_WEB_SITE###</label>
+			<input class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[homepage]" id="tx_comments_pi1_homepage" value="###HOMEPAGE###" /> ###REQUIRED_HOMEPAGE### ###ERROR_HOMEPAGE###<br />
+			<label for="tx_comments_pi1_location">###TEXT_LOCATION###</label>
+			<input class="tx-comments-comment-input" type="text" size="35" name="tx_comments_pi1[location]" id="tx_comments_pi1_location" value="###LOCATION###" /> ###REQUIRED_LOCATION### ###ERROR_LOCATION###<br />
+			###CAPTCHA###
+			<label for="tx_comments_pi1_content">###TEXT_CONTENT###</label>
+			<textarea cols="32" rows="7" name="tx_comments_pi1[content]" id="tx_comments_pi1_content">###CONTENT###</textarea> ###REQUIRED_CONTENT### ###ERROR_CONTENT###<br />
+			<label for="tx_comments_pi1_submit">&nbsp;</label>
+			<input type="submit" name="tx_comments_pi1[submit]" id="tx_comments_pi1_submit" value="###TEXT_SUBMIT###" />
+			<input type="reset" value="###TEXT_RESET###" />
+			###JS_USER_DATA###
+		</fieldset>
 	</form>
 </div>
 <!-- ###COMMENT_FORM### end -->
@@ -135,7 +137,7 @@
 <label for="tx_comments_pi1-captcha">###TEXT_ENTER_CODE###</label>
 <div class="tx-comments-captcha">
 ###SR_FREECAP_IMAGE###<br />###SR_FREECAP_CANT_READ###<br />
-<input class="tx-comments-comment-input" autocomplete="off" type="text" size="35" name="tx_comments_pi1-captcha" id="tx_comments_pi1_captcha" value="" /> ###REQUIRED_CAPTCHA### ###ERROR_CAPTCHA###<br />
+<input class="tx-comments-comment-input" type="text" size="35" id="tx_comments_pi1-captcha" name="tx_comments_pi1[captcha]" value="" /> ###REQUIRED_CAPTCHA### ###ERROR_CAPTCHA###<br />
 </div>
 <!-- ###CAPTCHA_SUB### end -->
 
